Fixed spacing for product category page.

--- a/themes/inhabitent/sass/_products-category.scss
+++ b/themes/inhabitent/sass/_products-category.scss
@@ -1,6 +1,11 @@
-.tax-product_type {
+.archive {
+  .page-title {
+    padding-top: 72px;
+    padding-bottom: 20px;
+  }
+
   .taxonomy-description p {
     text-align: center;
-    
+    padding-bottom: 48px;
   }
 }
